--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200;1,400&display=swap');
 
 * {
-  font-family: 'Raleway', sans-serif;
+ font-family: 'Raleway', sans-serif;
 }
+
 body {
-  max-width: 1440px;
-  padding: 0px 30px;
-  margin: auto;
+ max-width: 1440px;
+ margin: auto;
+ height: 100%;
 }
